update docs for EnterpriseApiClient

--- a/index.html
+++ b/index.html
@@ -252,10 +252,6 @@
                             <h4 class="font-semibold text-gray-900 dark:text-white">Noundry.DotEnvX</h4>
                             <p class="text-gray-600 dark:text-gray-300 text-sm">Enhanced .env file support with encryption, validation, and environment-specific configurations.</p>
                         </div>
-                        <div class="border-l-4 border-primary-500 pl-4">
-                            <h4 class="font-semibold text-gray-900 dark:text-white">Noundry.EnterpriseApiClient</h4>
-                            <p class="text-gray-600 dark:text-gray-300 text-sm">Powerful, flexible Enterprise API Client library built on Refit with automatic authentication, strongly-typed HTTP clients, and full CRUD operations.</p>
-                        </div>
                     </div>
                     <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
@@ -325,6 +321,11 @@
                             <h4 class="font-semibold text-gray-900 dark:text-white">Noundry.Tuxedo.Bowtie</h4>
                             <p class="text-gray-600 dark:text-gray-300 text-sm">Code and CLI based database schema synchronization</p>
                         </div>
+                          <div class="border-l-4 border-purple-500 pl-4">
+                          <h4 class="font-semibold text-gray-900 dark:text-white">Noundry.EnterpriseApiClient</h4>
+                            <p class="text-gray-600 dark:text-gray-300 text-sm">Powerful, flexible Enterprise API Client library built on Refit with automatic authentication, strongly-typed HTTP clients, and full CRUD operations.</p>
+                        </div>
+
                     </div>
                     <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
