update docs for EnterpriseApiClient

--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@
                             dotnet add package Noundry.Assertive<br>
                             dotnet add package Noundry.Guardian<br>
                             dotnet add package Noundry.Authnz<br>
-                            dotnet add package Noundry.DotEnvX<br>
-                            dotnet add package Noundry.EnterpriseApiClient
+                            dotnet add package Noundry.DotEnvX                            
                         </code>
                     </div>
                 </div>
@@ -330,7 +329,8 @@
                     <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
                             dotnet add package Noundry.Tuxedo<br>
-                            dotnet add package Noundry.Tuxedo.Bowtie
+                            dotnet add package Noundry.Tuxedo.Bowtie<br>
+                            dotnet add package Noundry.EnterpriseApiClient
                         </code>
                     </div>
                 </div>
